# AgenticAI-Project5-Procurement-Supplier-Negotiation-Copilot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/fixtures/: playbook_wtg_ltsa.json  sample_deal_state.json  suppliers.json
src/owpa/: config.py  glossary.py
src/owpa/agent/: graph.py  state.py  utils.py
src/owpa/agent/nodes/: classify.py  coach.py  draft_email.py  extract.py  ingest.py  load_memory.py  persist_state.py  predict_trade.py
src/owpa/data/: loader.py  storage.py
src/owpa/schemas/: deal_state.py  outputs.py  supplier_memory.py
streamlit_app/: Home.py
streamlit_app/assets/: style.css
streamlit_app/components/: supplier_memory_panel.py
